unpackaged/main/default/objects/Paquetes__c/Paquetes__c.object-meta.xml
<CustomObject>
    <label>Paquete</label>
    <nameField>
        <label>Nombre de Paquete</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paquetes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>