unpackaged/main/default/objects/Paquetes__c/fields/DescripcionPaquete__c.field-meta.xml
<CustomField>
    <fullName>DescripcionPaquete__c</fullName>
    <label>Descripción paquete</label>
    <type>TextArea</type>
</CustomField>