unpackaged/main/default/objects/Paquetes__c/fields/FechaEntregaPaquete__c.field-meta.xml
<CustomField>
    <fullName>FechaEntregaPaquete__c</fullName>
    <label>Fecha Entrega Paquete</label>
    <type>Date</type>
</CustomField>