unpackaged/main/default/objects/Paquetes__c/fields/NoProceso__c.field-meta.xml
<CustomField>
    <fullName>NoProceso__c</fullName>
    <label>No. Proceso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>