unpackaged/main/default/objects/Paquetes__c/fields/PaqueteEntregado__c.field-meta.xml
<CustomField>
    <fullName>PaqueteEntregado__c</fullName>
    <label>Paquete entregado</label>
    <type>TextArea</type>
</CustomField>