unpackaged/main/default/objects/Paquetes__c/fields/TipoPaquete__c.field-meta.xml
<CustomField>
    <fullName>TipoPaquete__c</fullName>
    <label>Tipo paquete</label>
    <type>TextArea</type>
</CustomField>